# DoaPerto

./: .env.example  DATABASE_DOCUMENTATION.md  DATABASE_TEMPLATE.sql  Dockerfile  FormularioDoacao.js  README.md  docker-compose.yml  help.txt  manage.py  pyproject.toml
.github/workflows/: ci.yml
doacoes/: admin.py  models.py  models_doacao.py  serializers.py  urls.py  views.py
doacoes/management/commands/: make_receptor.py
doacoes/migrations/: 0001_initial.py  0002_categoriaitem_doador_interesse_itemdoacao_mensagem_and_more.py  0003_doacao.py  0004_seed_categorias_padrao.py  0005_seed_instituicoes_padrao.py
doaperto/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Navbar.jsx  PrivateRoute.jsx
frontend/src/pages/: CadastroDador.jsx  CadastroReceptor.jsx  Explorar.jsx  Home.jsx  Login.jsx  MapView.jsx  Registro.jsx
