[project]
name = "doaperto"
version = "0.1.0"
description = "DoaPerto - Sistema de Doações"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "django-filter>=23.3",
    "geopy>=2.4",
    "python-decouple>=3.8",
]
